--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,24 @@
-{
-  "language": "node_js",
-  "node_js": [
-    "6",
-    "node"
-  ]
-}
+---
+language: node_js
+
+node_js:
+- node
+- lts/*
+
+sudo: false
+
+cache:
+  directories:
+  - node_modules
+
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
+script:
+- npm run test:coverage
+- npm run lint
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
